--- a/ViewViewModels/CollectionsContents/CollectionsUpdatable/AddEdit/EditCollectionView.xaml
+++ b/ViewViewModels/CollectionsContents/CollectionsUpdatable/AddEdit/EditCollectionView.xaml
@@ -4,15 +4,30 @@
              x:Class="MyFirstMobileApp.ViewViewModels.CollectionsUpdatable.AddEdit.EditCollectionView"
              Title="{Binding Title}">
 
-    <FlexLayout Padding="5" Direction="Column">
+    <FlexLayout Padding="5" 
+                Direction="Column">
 
-        <Label Text="Movie Title" FontAttributes="Bold" FontSize="Large"  TextColor="Black" Margin="5,5" />
+        <Label Text="Movie Title" 
+               FontAttributes="Bold" 
+               FontSize="Large"  
+               TextColor="Black" 
+               Margin="5,5" />
 
-        <Entry Placeholder="Enter Movie Title" FontAttributes="Bold" FontSize="Large" TextColor="Blue" HorizontalOptions="FillAndExpand"
-                   Text="{Binding MovieName, Mode=TwoWay}" x:Name="MovieTitle" Margin="5,-10" />
+        <Entry Placeholder="Enter Movie Title" 
+               FontAttributes="Bold" 
+               FontSize="Large" 
+               TextColor="Blue" 
+               HorizontalOptions="FillAndExpand"
+               Text="{Binding MovieName,Mode=TwoWay}" 
+               x:Name="MovieTitle" Margin="5,-10" />
 
-        <Button Text="Update" Command="{Binding UpdateBtnClicked}" BackgroundColor="Green" TextColor="White"
-                     HorizontalOptions="FillAndExpand" x:Name="saveBtn" Margin="0,10" />
+        <Button Text="Update" 
+                Command="{Binding UpdateBtnClicked}" 
+                BackgroundColor="Green" 
+                TextColor="White"
+                HorizontalOptions="FillAndExpand" 
+                x:Name="saveBtn" 
+                Margin="0,10" />
 
     </FlexLayout>
     
