--- a/ViewViewModels/CollectionsContents/CollectionIconsContents/CollectionsIconsView.xaml
+++ b/ViewViewModels/CollectionsContents/CollectionIconsContents/CollectionsIconsView.xaml
@@ -1,12 +1,81 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:model="clr-namespace:MyFirstMobileApp.Models.Entities"
              x:Class="MyFirstMobileApp.ViewViewModels.CollectionsContents.CollectionIconsContents.CollectionsIconsView"
-             Title="CollectionsIconsView">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="{Binding Title}">
+
+    <!--Applying a "Style" to the buttons. This will provide a space between the buttons-->
+    <ContentPage.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Margin" Value="10" />
+        </Style>
+    </ContentPage.Resources>
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Add" x:Name="Addbtn" Command="{Binding AddCommand}" />
+    </ContentPage.ToolbarItems>
+
+    <StackLayout BackgroundColor="Black">
+
+        <FlexLayout Direction="Column" AlignItems="Center">
+            <Label Text="Movies"  FontSize="50"  FontAttributes="Bold"  TextColor="Black" 
+                    BackgroundColor="Red"  WidthRequest="500"  HorizontalTextAlignment="Center" />
+        </FlexLayout>
+
+        <BoxView HeightRequest="2" BackgroundColor="#000000" />
+
+        <RefreshView IsRefreshing="{Binding IsBusy,Mode=TwoWay}" Command="{Binding RefreshCommand}">
+
+            <CollectionView x:Name="ItemsCollectionsView"  ItemsSource="{Binding SWMoviesCollection,Mode=TwoWay}"
+                                 SelectionMode="None" ItemsLayout="VerticalList" BackgroundColor="Black">
+
+                <CollectionView.ItemTemplate>
+
+                    <DataTemplate x:DataType="model:StarWarsMovies">
+
+                        <StackLayout>
+
+                            <!-- FlexLayout with NameOfMovie and buttons -->
+                            <FlexLayout AlignItems="Start">
+
+                                <Label Text="{Binding NameOfMovie,Mode=TwoWay}" FontAttributes="Bold" HorizontalTextAlignment="Center"
+                                        VerticalTextAlignment="End" TextColor="Red" BackgroundColor="Black" FontSize="16"
+                                        FlexLayout.Grow="1" HeightRequest="47"/>
+
+                                <StackLayout Orientation="Horizontal" 
+                                             HorizontalOptions="End"
+                                             HeightRequest="75">
+                                    
+                                    <ImageButton Source="Images/edit.jpg" 
+                                                 Command="{Binding Path=BindingContext.UpdateCommand,Source={x:Reference ItemsCollectionsView}}"
+                                                 CommandParameter="{Binding .}" 
+                                                 BackgroundColor="Black" 
+                                                 HorizontalOptions="EndAndExpand" />
+
+                                    <ImageButton Source="Images/iconsdelete.jpg" 
+                                                 Scale="1"
+                                                 Command="{Binding Path=BindingContext.DeleteCommand,Source={x:Reference ItemsCollectionsView}}"
+                                                 CommandParameter="{Binding .}" 
+                                                 BackgroundColor="Black"  
+                                                 HorizontalOptions="End" />
+                                </StackLayout>
+
+                            </FlexLayout>
+
+                            <!-- Add a BoxView for the separator below each item -->
+                            <BoxView HeightRequest="2" BackgroundColor="LightGray" />
+
+                        </StackLayout>
+
+                    </DataTemplate>
+
+                </CollectionView.ItemTemplate>
+
+            </CollectionView>
+
+        </RefreshView>
+
+    </StackLayout>
+
 </ContentPage>
