--- a/ViewViewModels/ControlsCollection/SliderControl/SliderView.xaml
+++ b/ViewViewModels/ControlsCollection/SliderControl/SliderView.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyFirstMobileApp.ViewViewModels.ControlsCollection.SliderControl.SliderView"
-             Title="{Binding Title}">
+             Title="{Binding Title}"
+             BackgroundColor="black">
 
     <StackLayout>
 
@@ -12,22 +13,22 @@
                  HorizontalOptions="CenterAndExpand" />
 
         <Slider x:Name="slider"
-                    Value="0.5"
-                    ThumbColor="Red"
-                    MaximumTrackColor="Blue"
-                    MinimumTrackColor="Black" />
+                ThumbColor="Red"
+                Value="0.5"
+                MaximumTrackColor="Aqua"
+                MinimumTrackColor="Black" />
 
         <Label x:Name="SliderValue"
                Text="{Binding Value, Source={x:Reference slider}, StringFormat= 'Value of the slider is {0:F2}'}"
                FontAttributes="Bold"
                FontSize="Large"
+               TextColor="White"
                HorizontalOptions="Center" />
 
         <Label x:Name="Info"
                Text="   Moving SLIDER will change OPACITY   "
                FontAttributes="Bold"
                FontSize="Medium"
-               BackgroundColor="Black"
                TextColor="Red"
                HorizontalOptions="Center" />
 
