--- a/ViewViewModels/ControlsCollection/EntryControl/Entry/EntryView.xaml
+++ b/ViewViewModels/ControlsCollection/EntryControl/Entry/EntryView.xaml
@@ -2,28 +2,32 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyFirstMobileApp.ViewViewModels.ControlsCollection.EntryControl.EntryView"
-             Title="{Binding Title}">
+             Title="{Binding Title}"
+             BackgroundColor="Green">
 
     <StackLayout VerticalOptions="Center">
 
         <Entry x:Name="EntryValue"
                Placeholder="Enter Text Here"
-               PlaceholderColor="Blue"
-               TextColor="Crimson"
+               PlaceholderColor="Black"
+               Text="{Binding EntryText}"
+               TextColor="White"
                WidthRequest="300"
-               HorizontalOptions="Center"/>
+               HorizontalOptions="Center" />
 
         <BoxView HeightRequest="3"
-                 BackgroundColor="Black"
-                 WidthRequest="300"/>
+                 BackgroundColor="White"
+                 WidthRequest="300" />
 
-        <Button Text="Submit"
+        <Button Text="Go To Results Page"
                 HorizontalOptions="Center"
                 FontAttributes="Bold,Italic"
                 Margin="10"
                 TextColor="White"
-                BackgroundColor="Blue"
-                Clicked="OnSubmitClicked"/>
+                BorderWidth="2"
+                BorderColor="Black"
+                BackgroundColor="Green"
+                Command="{Binding OnEntryClicked}" />
 
     </StackLayout>
     
