--- a/ViewViewModels/ControlsCollection/PickerControl/PickerXAML/PickerXAMLView.xaml
+++ b/ViewViewModels/ControlsCollection/PickerControl/PickerXAML/PickerXAMLView.xaml
@@ -1,48 +1,48 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MyFirstMobileApp.ViewViewModels.ControlsCollection.PickerControl.PickerView"
+             x:Class="MyFirstMobileApp.ViewViewModels.ControlsCollection.PickerControl.PickerXAML.PickerXAMLView"
              Title="{Binding Title}">
 
-    <StackLayout HorizontalOptions="Center"
-                 VerticalOptions="CenterAndExpand">
+    <StackLayout>
 
         <Label Text="Click Below"
                FontSize="Large"
                FontAttributes="Bold,Italic"
-               Margin="20"
-               MinimumHeightRequest="130"
-               HorizontalOptions="Center" />
+               MinimumWidthRequest="130"
+               HorizontalOptions="Center"
+               Margin="20" />
 
         <BoxView HeightRequest="3"
                  BackgroundColor="Black"
                  WidthRequest="375" />
 
-        <StackLayout>
+        <StackLayout HorizontalOptions="CenterAndExpand">
 
-            <Picker x:Name="pickerXAML"
-                    Title="Select a Star Wars Character"
-                    FontSize="Large"
+            <Picker x:Name="pickerVM"
+                    Title="Select a Character"
                     TitleColor="DarkRed"
-                    SelectedItem="{Binding SelectedItem}">
+                    SelectedItem="{Binding SelectedCharacter}"
+                    FontSize="Large">
 
                 <Picker.ItemsSource>
 
                     <x:Array Type="{x:Type x:String}">
-
+                        
                         <x:String>Binks</x:String>
                         <x:String>Chewie</x:String>
                         <x:String>Darth Vader</x:String>
                         <x:String>General Grievous</x:String>
                         <x:String>Han Solo</x:String>
                         <x:String>Leia</x:String>
-                        <x:String>Mace Windu</x:String>
+                        <x:String>Luke</x:String>
                         <x:String>Obi Wan Kenobi</x:String>
                         <x:String>Palpatine</x:String>
+                        <x:String>Windu</x:String>
                         <x:String>Yoda</x:String>
-
+                        
                     </x:Array>
-
+                    
                 </Picker.ItemsSource>
 
             </Picker>
@@ -51,14 +51,13 @@
                      BackgroundColor="Black"
                      WidthRequest="375" />
 
-            <ImageButton x:Name="Buttons"
-                         BackgroundColor="Transparent"
-                         Source="Images/submit.png"
+            <ImageButton BackgroundColor="Transparent"
+                         Source="{Binding SubmitButton}"
                          Command="{Binding OnSubmitClicked}"
                          Margin="10" />
 
         </StackLayout>
 
     </StackLayout>
-    
+
 </ContentPage>
