--- a/ViewViewModels/ControlsCollection/DatePickerControl/DatePickerVM/DatePickerVMView.xaml
+++ b/ViewViewModels/ControlsCollection/DatePickerControl/DatePickerVM/DatePickerVMView.xaml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MyFirstMobileApp.ViewViewModels.ControlsCollection.DatePickerControl.DatePickerXAML.DatePickerXAMLView"
+             x:Class="MyFirstMobileApp.ViewViewModels.ControlsCollection.DatePickerControl.DatePickerVM.DatePickerVMView"
              Title="{Binding Title}"
              BackgroundColor="#2F2F31">
-    
-    <!-- Applying a "Style" to the buttons. This will provide a space between the buttons -->
+
+    <!-- Applying a "Style" to the buttons. This will provide a space between the buttons. -->
     <ContentPage.Resources>
 
         <Style TargetType="Button">
@@ -24,36 +24,38 @@
         
     </ContentPage.Resources>
 
-
     <StackLayout VerticalOptions="Center">
 
         <Label Text="Start Date"
                FontAttributes="Bold"
                FontSize="Large"
-               TextColor="Red"
+               TextColor="White"
                HorizontalOptions="CenterAndExpand" />
 
-        <DatePicker x:Name="StartDatePicker"
-                    DateSelected="StartDatePicker_DateSelected"
-                    BackgroundColor="Red"
-                    TextColor="White"
+        <DatePicker Date="{Binding StartDate, Mode=TwoWay}"
+                    MinimumDate="{Binding MinStartDate}"
+                    MaximumDate="{Binding MaxEndDate}"
+                    BackgroundColor="White"
+                    TextColor="Black"
                     InputTransparent="False" />
 
         <Label Text="End Date"
                FontAttributes="Bold"
                FontSize="Large"
-               TextColor="White"
+               TextColor="Red"
                HorizontalOptions="CenterAndExpand" />
 
-        <DatePicker x:Name="EndDatePicker"
-                    DateSelected="EndDatePicker_DateSelected"
-                    BackgroundColor="White"
-                    TextColor="Black"
+        <DatePicker Date="{Binding EndDate, Mode=TwoWay}"
+                    MinimumDate="{Binding MinStartDate}"
+                    MaximumDate="{Binding MaxEndDate}"
+                    BackgroundColor="Red"
+                    TextColor="White"
                     InputTransparent="False" />
 
         <Button BackgroundColor="Transparent"
-                ImageSource="Images/submitbutton.png"
-                Clicked="Button_Clicked" />
+                ImageSource="{Binding SubmitButton}"
+                Scale="0.8"
+                Command="{Binding SubmitCommand}" />
 
     </StackLayout>
     
