--- a/ViewViewModels/ControlsCollection/DatePickerControl/DatePickerView.xaml
+++ b/ViewViewModels/ControlsCollection/DatePickerControl/DatePickerView.xaml
@@ -7,9 +7,21 @@
     
     <StackLayout>
 
-        <ImageButton Source="Images/dpxaml.png" Command="{Binding OnDatePickerXAMLClicked}" VerticalOptions="Start"/>
-        <Label Text="Welcome to Date Picker!" FontSize="70" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" TextColor="Purple"/>
-        <ImageButton Source="Images/dpvm.png" Command="{Binding OnDatePickerVMClicked}" VerticalOptions="EndAndExpand"/>
+        <ImageButton Source="Images/datepickerxaml.png" 
+                     Command="{Binding OnDatePickerXAMLClicked}" 
+                     VerticalOptions="StartAndExpand" />
+        
+        <Label Text="Welcome to Date Picker!" 
+               FontSize="60" 
+               HorizontalOptions="CenterAndExpand" 
+               VerticalOptions="CenterAndExpand" 
+               TextColor="WhiteSmoke" 
+               FontFamily="OpenSans-Semibold" 
+               Margin="22"/>
+        
+        <ImageButton Source="Images/datepickervm.png" 
+                     Command="{Binding OnDatePickerVMClicked}" 
+                     VerticalOptions="EndAndExpand" />
 
     </StackLayout>
     
