Changed pickerVM to pickerXAML

--- a/ViewViewModels/ControlsCollection/PickerControl/PickerXAML/PickerXAMLView.xaml
+++ b/ViewViewModels/ControlsCollection/PickerControl/PickerXAML/PickerXAMLView.xaml
@@ -19,7 +19,7 @@
 
         <StackLayout HorizontalOptions="CenterAndExpand">
 
-            <Picker x:Name="pickerVM"
+            <Picker x:Name="pickerXAML"
                     Title="Select a Character"
                     TitleColor="DarkRed"
                     SelectedItem="{Binding SelectedCharacter}"
